--- a/src/content/docs/en/drones/intro.mdx
+++ b/src/content/docs/en/drones/intro.mdx
@@ -3,15 +3,56 @@ title: Generals About "Drones"
 description: Overview of the current (2025) and pass landscape
 ---
 
-## Outline
-
-- Definitions and Terminology: set a common language and term for communication; Drone, UAV, and others.
-- short on history (can be skipped)
-- classification and types of UAV
-- current applications (in production environments)
-- future application (state of the art, in lab environments)
-- Common and extra components that form a drone.
-- open challenges of drones, from the technology perspective, skipping regulatory challenges (this can be a whole lecture).
-
 ## Definitions and Terminologies
 
+- Unmanned Aerial Vehicle (UAV) and Unmanned Aircraft System (UAS), the later prefer by the Federal Aviation Administration (FAA) and European Aviation Safety Agency (EASA)
+  - Remotely Piloted Vehicles (RPVs)
+  - Remotely Piloted Aircraft (RPA)
+
+Get the definition on UAS by the EASA:
+
+- Drone
+- Aerial Robot (a more generic term)
+- Companion computer
+- Ground Control Stations
+
+For a more comprehensive list of terms and definition see:
+- Definitions and Terminology  from Hand-book
+
+
+## Short Historical Notes
+
+TODO (can be skipped in lecture)
+
+## Taxonomy
+
+### Flight Dynamics
+
+important taxonomy of UAV is the aerodynamical classification:
+- Fixed-wing
+- rotative-wing: normally can have different numbers of rotors also called multi-rotors
+  - 1: helicopter
+  - 3: tricopter
+  - 4: quadcopter
+  - 6: hexacopter
+  - 8: octocopter
+
+
+### Weight
+
+### Flight Altitud and Range
+
+## Current Applications (in production environments)
+
+## Future application (state of the art, in lab environments)
+
+## High-Level UAV Avionics Architecture
+
+## Open Challenges of drones
+
+From the technology perspective, skipping regulatory challenges (this can be a whole lecture).
+
+- quiet (for multi-rotors)
+- more energy dense bateries
+- compact-power efficient computers
+- more integrated fallback detections
