--- a/src/content/docs/en/drones/landscape.mdx
+++ b/src/content/docs/en/drones/landscape.mdx
@@ -12,15 +12,15 @@ description: Overview of the current (2025) and the pass of the drone ecosystem
         - [paparazzi](https://wiki.paparazziuav.org/wiki/main_page) hardware and software standarization (legacy)
         - [slugs](https://slugsuav.soe.ucsc.edu/) hardware and software standarization (legacy)
     - historical notes on hardware projects (no standards)
-        - the ardupilot (initially hardware project) and the apm [(ardupilot mega)](https://www.ardupilot.co.uk/)
-        - in 2013 autopilot (now just software project) change to pixhawk. see [ardupilot](https://ardupilot.org/copter/docs/common-history-of-ardupilot.html)
+        - the ardupilot (initially hardware project) and the APM [(ardupilot mega)](https://www.ardupilot.co.uk/)
+        - in 2013 ardupilot (now just software project) change to Pixhawk. see [ardupilot](https://ardupilot.org/copter/docs/common-history-of-ardupilot.html)
     - brief review on common hardware interfaces on a pixhawk based flight controller
 
 ## Open-Source
 
 You've probably heard the term **open-source software** (OSS), but have you heard of **open-hardware**?, also referred to as **open-source hardware** (OSH), what about **open-standard**?
 
-Open-source is not about just making the source code accessible, but who gets to define what is open-source ? ... the [Open Source Initiative](https://opensource.org/about) is " a California public benefit corporation, with 501(c)3 tax-exempt status, founded in 1998."  with the vison of "leading voice on the policies and principles of open source [...]", the organization is compose of big player in the open-source scene like the Linux Foundation or the Python Foundation just to mention some. So we can rely on their definition of open source:
+Open-source is not about just making the source code accessible, but who gets to define what is open-source ? ... the [Open Source Initiative](https://opensource.org/about) is "[...] a California public benefit corporation [...] founded in 1998." with the vision of "leading voice on the policies and principles of open source [...]", the organization is compose of big player in the open-source scene like the Linux Foundation or the Python Foundation just to mention some. So we can rely on their definition of open source:
 
 <Definition term="Open-Source">
 
@@ -66,7 +66,9 @@ Having a open-standard around the drone hardware like the flight controller make
 
 ## Building an Open Ecosystem
 
-autopilots firmwares (for pixhawk-based flight controllers)
+Note from Harley to Harley: I think is make scene to connect from here to the the note on autopilots. to show how the principles of open-source, open-hardware and open-standards help to shape the current hobby, reseach and enterpise industrial ecosystem of drones.
+
+autopilots firmwares (for pixhawk-based flight controllers). We will discuss more about autopilots in [A review on autopilots](drones/autopilots)
 - [px4](https://px4.io/). px4 is hosted by [dronecode foundation](https://dronecode.org/), a [linux foundation](https://www.linuxfoundation.org/) non-profit.
 - [ardupilot](https://ardupilot.org/). community-driven project, fuel by volunteer and [corporate partners](https://ardupilot.org/ardupilot/docs/common-partners.html)
 
