--- a/src/content/docs/en/drones/index.mdx
+++ b/src/content/docs/en/drones/index.mdx
@@ -15,19 +15,20 @@ description: behind drones
 Part 1: Introduction
 - [General about drones](drones/intro)
 - [Development Landscape](drones/landscape)
+- [Autopilots](drones/autopilots)
 
 Part 2: Mathematical foundations
 - [Flying principles](drones/principles)
 - [System Dynamics](drones/dynamics)
 
-Part 3: The Propulsion System
+Part 3: Sensors:
+- [Core and external](drones/sensors)
+
+Part 4: The Propulsion System
 - [Motors](drones/motors) (this is a general topic)
 - [Propellers](drones/props) (practical considerations). For a theoretical perspective see [Flying principles](drones/principles)
 - [Electronic Speed Controller](drones/esc) (for brushless motors)
 - [Batteries](batteries) (this is a general topic)
-
-Part 4: Sensors:
-- [Core and external](drones/sensors)
 
 Part 5: Communication
 - [Data links and telemetry]()
