move note in geometry

--- a/src/content/docs/en/geometry/index.mdx
+++ b/src/content/docs/en/geometry/index.mdx
@@ -7,4 +7,5 @@ description: Selected Topics in geometry
 ## Introduction
 
 - [Euclidean space](geometry/euclidean)
+- [Fundamentals of geometry](geometry/transformations)
 
