--- a/src/content/docs/en/geometry/transformations.mdx
+++ b/src/content/docs/en/geometry/transformations.mdx
@@ -1,12 +1,12 @@
 ---
-title: "Foundamental of geometry"
+title: "Fundamentals of geometry"
 ---
 
-import Translation from '../../../components/Geometry/Translation.astro'
-import Rotation from '../../../components/Geometry/Rotation.astro'
-import Scale from '../../../components/Geometry/Scale.astro'
-import Affine from '../../../components/Geometry/Affine.astro'
-import Homography from '../../../components/Geometry/Homography.astro'
+import Translation from '../../../../components/Geometry/Translation.astro'
+import Rotation from '../../../../components/Geometry/Rotation.astro'
+import Scale from '../../../../components/Geometry/Scale.astro'
+import Affine from '../../../../components/Geometry/Affine.astro'
+import Homography from '../../../../components/Geometry/Homography.astro'
 
 ## 2D Point
 
