update note on tf for ros

--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -1778,3 +1778,20 @@ DOI: 10.1007/11840541_68},
   langid = {english},
   pagetotal = {1}
 }
+@inproceedings{footeTfTransformLibrary2013,
+  title = {Tf: {{The}} Transform Library},
+  shorttitle = {Tf},
+  booktitle = {2013 {{IEEE Conference}} on {{Technologies}} for {{Practical Robot Applications}} ({{TePRA}})},
+  author = {Foote, Tully},
+  date = {2013-04},
+  pages = {1--6},
+  publisher = {IEEE},
+  location = {Woburn, MA, USA},
+  doi = {10.1109/TePRA.2013.6556373},
+  url = {http://ieeexplore.ieee.org/document/6556373/},
+  urldate = {2026-01-08},
+  abstract = {The tf library was designed to provide a standard way to keep track of coordinate frames and transform data within an entire system such that individual component users can be confident that the data is in the coordinate frame that they want without requiring knowledge of all the coordinate frames in the system. During early development of the Robot Operating System (ROS), keeping track of coordinate frames was identified as a common pain point for developers. The complexity of this task made it a common place for bugs when developers improperly applied transforms to data. The problem is also a challenge due to the often distributed sources of information about transformations between different sets of coordinate frames. This paper will explain the complexity of the problem and distill the requirements. Then it will discuss the design of the tf library in relation to the requirements. A few use cases will be presented to demonstrate successful deployment of the library. And powerful extensions to the core capabilities such as being able to transform data in time as well as in space.},
+  eventtitle = {2013 {{IEEE Conference}} on {{Technologies}} for {{Practical Robot Applications}} ({{TePRA}})},
+  isbn = {978-1-4673-6225-2 978-1-4673-6223-8 978-1-4673-6224-5},
+  langid = {english}
+}
