--- a/src/content/docs/en/ros2/index.mdx
+++ b/src/content/docs/en/ros2/index.mdx
@@ -35,13 +35,13 @@ Content Outline:
 ## Module 2 - Intermediate
 
 Intermediate - Tooling
-- TF tree and Transformations with TF2
-- Introduction to RVIZ
-- RVIZ plugin development
+- Visualization tool, RVIZ2 and friends
+- [TF tree, Frames and Transformations with TF2](ros2/tf2)
 - [Robot model description formats](ros2/description)
 - [Introduction to Gazebo](ros2/gazebo)
 - Building sim environment in Gazebo
 - Gazebo plugins ecosystem
+- RVIZ plugin development
 
 ## Module 3 - Advanced
 
